k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic
  labels:
    project: spring-petclinic
    tier: microservices
